--- a/Stride.Launcher/Stride.Launcher.csproj
+++ b/Stride.Launcher/Stride.Launcher.csproj
@@ -3,6 +3,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Stride.Launcher</RootNamespace>
+    <Version>5.0.6</Version>
   </PropertyGroup>
   <ItemGroup>
     <Watch Include="**\*.axaml" />
